--- a/Dom/ProductCart.html
+++ b/Dom/ProductCart.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./ProductCart.css">
 </head>
 <body>
-    <!-- <script src="./NestedFunction.js"></script> -->
-     <script src="Js Folder/AdvanceArrayMethod.js"></script>
+    <h1 id="h1">Products</h1>
+    <section class="product"></section>
+   <script src="./ProductCart.js"></script>
 </body>
 </html>
