--- a/Js Folder/index.html
+++ b/Js Folder/index.html
@@ -10,7 +10,7 @@
     <!-- <script src="./index.js"></script> -->
      <!-- <script src="./practice.js"></script> -->
       <!-- <script src="Function.js"></script> -->
-       <script src="./ArrowFunction.js"></script>
+       <script src="./BrowserStorage.js"></script>
 
 </body>
 </html>
