--- a/Assignment on function and array/Question10.html
+++ b/Assignment on function and array/Question10.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- <script src="./NestedFunction.js"></script> -->
-     <script src="Js Folder/AdvanceArrayMethod.js"></script>
+    <script src="./Question10.js"></script>
 </body>
 </html>
