--- a/Dom/DOM practice/index.html
+++ b/Dom/DOM practice/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./index.css">
+    
 </head>
-<body>
-    <!-- <script src="./NestedFunction.js"></script> -->
-     <script src="Js Folder/AdvanceArrayMethod.js"></script>
+<body><h1>Hello</h1>
+    <script src="./index.js"></script>
 </body>
 </html>
