--- a/JavaScript Revesion/index.html
+++ b/JavaScript Revesion/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- <script src="./NestedFunction.js"></script> -->
-     <script src="Js Folder/AdvanceArrayMethod.js"></script>
+    
+    <script src="./Pratice.js"></script>
 </body>
 </html>
