--- a/Js Folder/Binding.html
+++ b/Js Folder/Binding.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- <script src="./NestedFunction.js"></script> -->
-     <script src="Js Folder/AdvanceArrayMethod.js"></script>
+    <script src="./Binding.js"></script>
 </body>
 </html>
